--- a/Forum.html
+++ b/Forum.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div id="sidedrawer" class="mui--no-user-select">
-      <div id="sidedrawer-brand" class="mui--appbar-line-height mui--text-title" style="color:black">Thought Sharing</div>
+      <div id="sidedrawer-brand" class="mui--appbar-line-height mui--text-title" style="color:black">Thought Stack</div>
       <div class="mui-divider"></div>
         <ul id="menuContainer">
             <li id="myClassMenu">
