--- a/MyClasses.html
+++ b/MyClasses.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div id="sidedrawer" class="mui--no-user-select">
-        <div id="sidedrawer-brand" class="mui--appbar-line-height mui--text-title">Thought Sharing</div>
+        <div id="sidedrawer-brand" class="mui--appbar-line-height mui--text-title">Thought Stack</div>
         <div class="mui-divider"></div>
         <ul>
             <li>
