--- a/SignUp.html
+++ b/SignUp.html
@@ -32,7 +32,7 @@
       <div class="mui-container">
         <table width="100%">
           <tr class="mui--appbar-height">
-            <td class="mui--text-title">Thought Sharing</td>
+            <td class="mui--text-title">Thought Stack</td>
           </tr>
         </table>
       </div>
