--- a/AdminHome.html
+++ b/AdminHome.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div id="sidedrawer" class="mui--no-user-select">
-        <div id="sidedrawer-brand" class="mui--appbar-line-height mui--text-title">Thought Sharing</div>
+        <div id="sidedrawer-brand" class="mui--appbar-line-height mui--text-title">Thought Stack</div>
         <div class="mui-divider"></div>
         <ul>
             <li id="btnSignOut">
@@ -37,7 +37,7 @@
             <div class="mui-container-fluid">
                 <a class="sidedrawer-toggle mui--visible-xs-inline-block js-show-sidedrawer">☰</a>
                 <a class="sidedrawer-toggle mui--hidden-xs js-hide-sidedrawer">☰</a>
-                <button class="mui--text-title mui--visible-xs-inline-block">Thought Sharing</button>
+                <button class="mui--text-title mui--visible-xs-inline-block">Thought Stack</button>
             </div>
         </div>
     </header>
